# OcTra

./: README.md  pyproject.toml  translate.py
OcTra/: __main__.py  translate.py
OcTra/configurations/: get_constants.py  get_hyperparameters.py
funcs/: language_funcs.py  models.py
