[tool.poetry]
name = "octra"
version = "0.1.0"
description = ""
authors = ["aschenbecherwespe <naraic0o@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
gradio = "^3.39.0"
fasttext-wheel = "^0.9.2"
torch = "^2.0.1"
pyngrok = "^6.0.0"
transformers = "^4.31.0"
nltk = "^3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
